# korova

./: Cargo.toml  Dockerfile  LICENSE  README.md  shell.nix
src/: main.rs  plugins.rs
