[package]
name = "korova"
version = "0.1.6"
authors = ["Adrian Sadłocha"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
openweathermap = "0.2.3"
mongodb = "2.0.0"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
version = "0.10"
