[package]
name = "korova"
version = "0.1.13"
authors = ["Adrian Sadłocha"]
edition = "2018"

[dependencies]
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
openweathermap = "0.2.3"
mongodb = "2.0.0"
reqwest = "0.11.12"
serde = "1.0.145"
rand = "0.8.5"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
version = "0.10"

[profile.release]
lto = true
